--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <div class="login-header">
-    <img src="../../../assets/images/logo.png" alt="logo">
-    <span>中国航天科工二院25所</span>
+    <!-- <img src="../../../assets/images/logo.png" alt="logo"> -->
+    <!-- <span>中国航天科工二院25所</span> -->
   </div>
   <div class="login-content">
     <span class="login-content-text">仪器设备管理系统</span>
@@ -48,7 +48,7 @@
 
   </div>
   <div class="login-footer">
-    <div>北 京 航 天 福 道 高 技 术 股 份 有 限 公 司</div>
-    <div>BEIJING AEROSPACE FUDAO HIGH TECH.CO.LTD</div>
+    <!-- <div>北 京 航 天 福 道 高 技 术 股 份 有 限 公 司</div> -->
+    <!-- <div>BEIJING AEROSPACE FUDAO HIGH TECH.CO.LTD</div> -->
   </div>
 </div>
